# youth-map

./: .copier-answers.env  .copier-answers.yml  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  README.md  Taskfile.yaml  TaskfileCustom.yaml  notes.md.asc  pyproject.toml  rxconfig.py
.github/workflows/: check.yml  docker.yml  publish.yml
assets/: marker.js  styles.css
docker/: Dockerfile  Makefile
tests/: test_state.py
youth_map/: __init__.py  state.py  styles.py  youth_map.py
youth_map/components/: __init__.py  leaflet.py  marker.py
youth_map/data/: __init__.py  locations.json  locations.py
youth_map/pages/: __init__.py  data.py  map.py
